# pyobjtojson

./: README.md  check_types.sh  example_standard_types.py  example_type_hints.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pyobjtojson/: __init__.py
tests/: README.md  __init__.py  test_basic_types.py  test_circular_references.py  test_custom_classes.py  test_dataclasses.py  test_edge_cases.py  test_pydantic.py  test_standard_types.py
