[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyobjtojson"
version = "0.9"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"},
]
description = "A Python library that simplifies serializing any Python object to JSON-friendly structures, gracefully handling circular references."

requires-python = ">=3.10"

license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

keywords = ["json", "serialization", "circular references", "pydantic", "dataclasses"]
readme = "README.md"

[project.urls]
Repository = "https://github.com/carlosplanchon/pyobjtojson.git"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pydantic>=2.0.0",
    "mypy>=1.0.0"
]

[tool.setuptools]
packages = ["pyobjtojson"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=pyobjtojson",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
show_error_codes = true
show_column_numbers = true
pretty = true
follow_imports = "normal"
ignore_missing_imports = true
exclude = ["tests/", ".venv/", "build/", "dist/"]
